<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/new_color_back_ground_color"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/new_color_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/calculate_your"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/age"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/new_color_back_ground_age_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/new_color_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/in_minutes"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textColor="@color/new_color_text_button"
        android:backgroundTint="@color/white"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/new_color_text_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/new_color_text_selected_data"
        android:text="@string/select_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSelectedDateInMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/new_color_text_color"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/new_color_text_selected_data"
        android:text="@string/age_in_minute"
        android:textSize="18sp" />

</LinearLayout>